# kitchen-mincer

./: .coveragerc  .gitignore  .gitreview  README.rst  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: code.rst  conf.py  index.rst  workflow.rst
elements/jenkins/: README.md
elements/jenkins-jjb/install.d/: 12-jjb
elements/jenkins/install.d/: 11-jenkins-plugins
elements/serverspec/install.d/: 10-serverspec
mincer/: __init__.py  action.py  constants.py  credentials.py  exceptions.py  logdispatcher.py  main.py  marmite.py  media.py  mediamanager.py  mixer.py  opts.py  provider.py
mincer/actions/background_check/: __init__.py  background_check.py
mincer/actions/local_script/: __init__.py  local_script.py
mincer/actions/run_command/: __init__.py  run_command.py
mincer/actions/serverspec_check/: __init__.py  serverspec.py  serverspec_check.py
mincer/actions/serverspec_check/static/: serverspec.yaml
mincer/actions/simple_check/: __init__.py  simple_check.py  tester.py
mincer/actions/start_infra/: __init__.py  start_infra.py
mincer/actions/update_infra/: __init__.py  update_infra.py
mincer/actions/upload_images/: __init__.py  upload_images.py
mincer/logdispatchers/directory/: __init__.py  logdispatcher.py
mincer/logdispatchers/directory/tests/: test_logdispatchers.py
mincer/logdispatchers/pylogger/: __init__.py  logdispatcher.py
mincer/logdispatchers/swift/: __init__.py  logdispatcher.py
mincer/logdispatchers/swift/tests/: test_logdispatchers.py
mincer/providers/: __init__.py
mincer/providers/heat/: __init__.py  provider.py
mincer/providers/heat/tests/: test_provider.py
mincer/providers/heat_devstack_docker/: README.rst  __init__.py  provider.py
mincer/testers/serverspec_check/: serverspec.py
mincer/testers/serverspec_check/static/: configure_serverspec.sh
mincer/testers/simple_check/: tester.py
mincer/utils/: fs_layer.py  logger.py  ssh.py
mincer/utils/tests/: test_fs_layer.py  test_logger.py
misc/: .gitignore  kitchenbot-tests.py  run_script.sh  validate_sample.sh
samples/jenkins/: README.md  build_image.sh  configure_jenkins.sh  heat.yaml  heat_v2.yaml  marmite.yaml
samples/jenkins/elements/jenkins-jjb/: README.md
samples/jenkins/elements/jenkins-jjb/install.d/: 12-jjb
samples/jenkins/elements/jenkins/install.d/: 10-jenkins  11-jenkins-plugins
samples/jenkins/elements/jenkins/pre-install.d/: 10-jenkins
samples/jenkins/elements/kitchen-mincer/install.d/: 99-kitchen-mincer
samples/serverspec/: README.md  build_image.sh
samples/spinal-stack/: generate_heat.sh  marmite.yaml
samples/wordpress/: apt_mirror_config.sh  backup_wordpress.sql  build_image.sh  db_install.sh  heat.yaml  marmite.yaml  wp_install.sh
samples/wordpress-docker-all-in-one/: marmite.yaml
samples/wordpress-docker-all-in-one/heat/: wordpress-docker.yaml
samples/wordpress-marmite/: marmite.yaml
samples/wordpress-marmite/identities/: samplecloud.yaml
tests/: test_actions.py  test_credentials.py  test_main.py  test_main_arg_parsing.py  test_marmite.py  test_media.py  test_mediamanager.py  test_mixer.py  test_provider.py  test_ssh.py
tests/logdispatchers/: test_directory.py  test_pylogger.py  test_swift.py
tests/test_files/: marmite.yaml
tests/test_marmite/: marmite.yaml
tests/test_marmite_bad_template/: marmite.yaml
tests/test_marmite_missing_keys/: marmite.yaml
