[metadata]
name = kitchen-mincer
summary = Mince your cloud
description-file = README.rst
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = ci
author = eNovance Devs
author-email = boa@enovance.com
home-page = https://github.com/envance/kitchen-mincer

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    mincer

[entry_points]
console_scripts =
    kitchen-mincer = mincer.main:main

mincer.providers =
      heat_devstack_docker = mincer.providers.heat_devstack_docker:HeatDevstackDocker
      heat                 = mincer.providers.heat:Heat

mincer.tests =
      simple_check = mincer.testers.simple_check.tester:SimpleCheck

mincer.logdispatchers =
      directory = mincer.logdispatchers.directory:Directory
