[metadata]
name = mincer
summary = Mince your cloud
description-file = README.rst
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = ci
author = eNovance Devs
author-email = boa@enovance.com
home-page = https://github.com/envance/kitchen-mincer

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    mincer

[entry_points]
console_scripts =
    kitchen-mincer = mincer.main:main

mincer.providers =
      heat                 = mincer.providers.heat:Heat

mincer.actions =
      simple_check     = mincer.actions.simple_check.simple_check:SimpleCheck
      serverspec       = mincer.actions.serverspec_check.serverspec_check:Serverspec
      local_script     = mincer.actions.local_script.local_script:LocalScript
      start_infra      = mincer.actions.start_infra.start_infra:StartInfra
      run_command      = mincer.actions.run_command.run_command:RunCommand
      background_check = mincer.actions.background_check.background_check:BackgroundCheck

mincer.logdispatchers =
      directory = mincer.logdispatchers.directory:Directory
      swift = mincer.logdispatchers.swift:Swift
      pylogger = mincer.logdispatchers.pylogger:PyLogger
